Add indices to history

--- a/Scratch.ipynb
+++ b/Scratch.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +45,7 @@
        "{'cell_type': 'markdown', 'metadata': {}, 'source': '## Data Cleaning'}"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -59,39 +59,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {
     "scrolled": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[\r\n",
-      "  {\r\n",
-      "    \"code\": \"mortality = pd.read_csv('sam_data/child_mortality_0_5_year_olds_dying_per_1000_born.csv')\\nmortality\",\r\n",
-      "    \"response\": {\r\n",
-      "      \"content\": {\r\n",
-      "        \"data\": {\r\n",
-      "          \"text/html\": \"<div>\\n<style scoped>\\n    .dataframe tbody tr th:only-of-type {\\n        vertical-align: middle;\\n    }\\n\\n    .dataframe tbody tr th {\\n        vertical-align: top;\\n    }\\n\\n    .dataframe thead th {\\n        text-align: right;\\n    }\\n</style>\\n<table border=\\\"1\\\" class=\\\"dataframe\\\">\\n  <thead>\\n    <tr style=\\\"text-align: right;\\\">\\n      <th></th>\\n      <th>geo</th>\\n      <th>1800</th>\\n      <th>1801</th>\\n      <th>1802</th>\\n      <th>1803</th>\\n      <th>1804</th>\\n      <th>1805</th>\\n      <th>1806</th>\\n      <th>1807</th>\\n      <th>1808</th>\\n      <th>...</th>\\n      <th>2009</th>\\n      <th>2010</th>\\n      <th>2011</th>\\n      <th>2012</th>\\n      <th>2013</th>\\n      <th>2014</th>\\n      <th>2015</th>\\n      <th>2016</th>\\n      <th>2017</th>\\n      <th>2018</th>\\n    </tr>\\n  </thead>\\n  <tbody>\\n    <tr>\\n      <th>0</th>\\n      <td>Afghanistan</td>\\n      <td>469.0</td>\\n      <td>469.0</td>\\n      <td>469.0</td>\\n      <td>469.0</td>\\n      <td>469.0</td>\\n      <td>469.0</td>\\n      <td>470.0</td>\\n      <td>470.0</td>\\n      <td>470.0</td>\\n      <td>...</td>\\n      <td>94.1</td>\\n      <td>90.2</td>\\n      <td>86.4</td>\\n      <td>82.8</td>\\n      <td>79.3</td>\\n      <td>76.1</td>\\n      <td>73.2</td>\\n      <td>70.4</td>\\n      <td>68.2</td>\\n      <td>65.9</td>\\n    </tr>\\n    <tr>\\n      <th>1</th>\\n      <td>Albania</td>\\n      <td>375.0</td>\\n      <td>375.0</td>\\n      <td>375.0</td>\\n      <td>375.0</td>\\n      <td>375.0</td>\\n      <td>375.0</td>\\n      <td>375.0</td>\\n      <td>375.0</td>\\n      <td>375.0</td>\\n      <td>...</td>\\n      <td>17.2</td>\\n      <td>16.6</td>\\n      <td>16.0</td>\\n      <td>15.4</td>\\n      <td>14.9</td>\\n      <td>14.4</td>\\n      <td>14.0</td>\\n      <td>13.5</td>\\n      <td>13.3</td>\\n      <td>12.9</td>\\n    </tr>\\n    <tr>\\n      <th>2</th>\\n      <td>Algeria</td>\\n      <td>460.0</td>\\n      <td>460.0</td>\\n      <td>460.0</td>\\n      <td>460.0</td>\\n      <td>460.0</td>\\n      <td>460.0</td>\\n      <td>460.0</td>\\n      <td>460.0</td>\\n      <td>460.0</td>\\n      <td>...</td>\\n      <td>28.3</td>\\n      <td>27.3</td>\\n      <td>26.6</td>\\n      <td>26.1</td>\\n      <td>25.8</td>\\n      <td>25.6</td>\\n      <td>25.5</td>\\n      <td>25.2</td>\\n      <td>23.9</td>\\n      <td>23.1</td>\\n    </tr>\\n    <tr>\\n      <th>...</th>\\n      <td>...</td>\\n      <td>...</td>\\n      <td>...</td>\\n      <td>...</td>\\n      <td>...</td>\\n      <td>...</td>\\n      <td>...</td>\\n      <td>...</td>\\n      <td>...</td>\\n      <td>...</td>\\n      <td>...</td>\\n      <td>...</td>\\n      <td>...</td>\\n      <td>...</td>\\n      <td>...</td>\\n      <td>...</td>\\n      <td>...</td>\\n      <td>...</td>\\n      <td>...</td>\\n      <td>...</td>\\n      <td>...</td>\\n    </tr>\\n    <tr>\\n      <th>190</th>\\n      <td>Yemen</td>\\n      <td>540.0</td>\\n      <td>540.0</td>\\n      <td>540.0</td>\\n      <td>540.0</td>\\n      <td>540.0</td>\\n      <td>540.0</td>\\n      <td>540.0</td>\\n      <td>540.0</td>\\n      <td>540.0</td>\\n      <td>...</td>\\n      <td>58.3</td>\\n      <td>56.3</td>\\n      <td>55.5</td>\\n      <td>55.3</td>\\n      <td>55.3</td>\\n      <td>55.3</td>\\n      <td>55.3</td>\\n      <td>55.3</td>\\n      <td>53.0</td>\\n      <td>51.9</td>\\n    </tr>\\n    <tr>\\n      <th>191</th>\\n      <td>Zambia</td>\\n      <td>410.0</td>\\n      <td>410.0</td>\\n      <td>410.0</td>\\n      <td>410.0</td>\\n      <td>410.0</td>\\n      <td>410.0</td>\\n      <td>410.0</td>\\n      <td>410.0</td>\\n      <td>410.0</td>\\n      <td>...</td>\\n      <td>87.9</td>\\n      <td>83.1</td>\\n      <td>79.9</td>\\n      <td>76.1</td>\\n      <td>72.9</td>\\n      <td>69.6</td>\\n      <td>66.1</td>\\n      <td>63.4</td>\\n      <td>61.6</td>\\n      <td>59.5</td>\\n    </tr>\\n    <tr>\\n      <th>192</th>\\n      <td>Zimbabwe</td>\\n      <td>396.0</td>\\n      <td>396.0</td>\\n      <td>396.0</td>\\n      <td>396.0</td>\\n      <td>396.0</td>\\n      <td>396.0</td>\\n      <td>396.0</td>\\n      <td>396.0</td>\\n      <td>396.0</td>\\n      <td>...</td>\\n      <td>94.9</td>\\n      <td>89.9</td>\\n      <td>83.8</td>\\n      <td>76.0</td>\\n      <td>70.0</td>\\n      <td>64.3</td>\\n      <td>59.9</td>\\n      <td>56.4</td>\\n      <td>56.8</td>\\n      <td>55.5</td>\\n    </tr>\\n  </tbody>\\n</table>\\n<p>193 rows \\u00d7 220 columns</p>\\n</div>\",\r\n",
-      "          \"text/plain\": \"             geo   1800   1801   1802   1803   1804   1805   1806   1807  \\\\\\n0    Afghanistan  469.0  469.0  469.0  469.0  469.0  469.0  470.0  470.0   \\n1        Albania  375.0  375.0  375.0  375.0  375.0  375.0  375.0  375.0   \\n2        Algeria  460.0  460.0  460.0  460.0  460.0  460.0  460.0  460.0   \\n..           ...    ...    ...    ...    ...    ...    ...    ...    ...   \\n190        Yemen  540.0  540.0  540.0  540.0  540.0  540.0  540.0  540.0   \\n191       Zambia  410.0  410.0  410.0  410.0  410.0  410.0  410.0  410.0   \\n192     Zimbabwe  396.0  396.0  396.0  396.0  396.0  396.0  396.0  396.0   \\n\\n      1808  ...   2009  2010  2011  2012  2013  2014  2015  2016  2017  2018  \\n0    470.0  ...   94.1  90.2  86.4  82.8  79.3  76.1  73.2  70.4  68.2  65.9  \\n1    375.0  ...   17.2  16.6  16.0  15.4  14.9  14.4  14.0  13.5  13.3  12.9  \\n2    460.0  ...   28.3  27.3  26.6  26.1  25.8  25.6  25.5  25.2  23.9  23.1  \\n..     ...  ...    ...   ...   ...   ...   ...   ...   ...   ...   ...   ...  \\n190  540.0  ...   58.3  56.3  55.5  55.3  55.3  55.3  55.3  55.3  53.0  51.9  \\n191  410.0  ...   87.9  83.1  79.9  76.1  72.9  69.6  66.1  63.4  61.6  59.5  \\n192  396.0  ...   94.9  89.9  83.8  76.0  70.0  64.3  59.9  56.4  56.8  55.5  \\n\\n[193 rows x 220 columns]\"\r\n",
-      "        },\r\n",
-      "        \"execution_count\": 3,\r\n"
-     ]
+     "data": {
+      "text/plain": [
+       "159"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "import json\n",
     "\n",
-    "history = [run for run in cell.metadata.history\n",
-    "           for cell in nb.cells\n",
-    "           if 'history' in cell.metadata]\n",
+    "history = [{**run, 'cell': index}\n",
+    "           for index, cell in enumerate(nb.cells)\n",
+    "           if 'history' in cell.metadata\n",
+    "           for run in cell.metadata.history]\n",
     "\n",
     "with open('sam.json', 'w') as f:\n",
     "    json.dump(history, f, indent=2)\n",
     "    \n",
-    "!head sam.json"
+    "len(history)"
    ]
   },
   {
